--- a/cosmeticsapp/src/main/resources/templates/quiz.html
+++ b/cosmeticsapp/src/main/resources/templates/quiz.html
@@ -29,27 +29,27 @@
 				<li>
 					<p th:id="${circle1}"></p>
 					<p th:text="${question1}" class="text-center"></p>
-					<p><input th:type="${radio1}" id="fair" name="q1" value="fair" th:value="${value1}"></input></p>
+					<p><input type="radio" id="fair" name="q1" value="fair" th:value="${value1}"></input></p>
 				</li>
 				<li>
 					<p th:id="${circle2}"></p>
 					<p th:text="${question2}" class="text-center"></p>
-					<p><input th:type="${radio2}" id="light" name="q1" value="light" th:value="${value2}"></input></p>
+					<p><input type="radio" id="light" name="q1" value="light" th:value="${value2}"></input></p>
 				</li>
 				<li>
 					<p th:id="${circle3}"></p>
 					<p th:text="${question3}" class="text-center"></p>
-					<p><input th:type="${radio3}" id="medium" name="q1" value="medium" th:value="${value3}"></input></p>
+					<p><input type="radio" id="medium" name="q1" value="medium" th:value="${value3}"></input></p>
 				</li>
 				<li>
 					<p th:id="${circle4}"></p>
 					<p th:text="${question4}" class="text-center"></p>
-					<p><input th:type="${radio4}" id="tanolive" name="q1" value="tanolive" th:value="${value4}"></input></p>
+					<p><input type="radio" id="tanolive" name="q1" value="tanolive" th:value="${value4}"></input></p>
 				</li>
 				<li>
 					<p th:id="${circle5}"></p>
 					<p th:text="${question5}" class="text-center"></p>
-					<p><input th:type="${radio5}" id="deep" name="q1" value="deep" th:value="${value5}"></input></p>
+					<p><input type="radio" id="deep" name="q1" value="deep" th:value="${value5}"></input></p>
 				</li>
 			</ul>
 		</div>
