--- a/cosmeticsapp/src/main/resources/templates/quiz2.html
+++ b/cosmeticsapp/src/main/resources/templates/quiz2.html
@@ -28,19 +28,19 @@
 			<ul class="clearfix text-center">
 				<li>
 					<p th:text="${question1}" class="text-center"></p>
-					<p><input th:type="${radio1}" id="dry" name="q2" value="dry" th:value="*{value1}"></input></p>
+					<p><input type="radio" id="dry" name="q2" value="dry" th:value="*{value1}"></input></p>
 				</li>
 				<li>
 					<p th:text="${question2}" class="text-center"></p>
-					<p><input th:type="${radio2}" id="normal" name="q2" value="normal" th:value="*{value2}"></input></p>
+					<p><input type="radio" id="normal" name="q2" value="normal" th:value="*{value2}"></input></p>
 				</li>
 				<li>
 					<p th:text="${question3}" class="text-center"></p>
-					<p><input th:type="${radio3}" id="oily" name="q2" value="oily" th:value="*{value3}"></input></p>
+					<p><input type="radio" id="oily" name="q2" value="oily" th:value="*{value3}"></input></p>
 				</li>
 				<li>
 					<p th:text="${question4}" class="text-center"></p>
-					<p><input th:type="${radio4}" id="combination" name="q2" value="combination" th:value="*{value4}"></input></p>
+					<p><input type="radio" id="combination" name="q2" value="combination" th:value="*{value4}"></input></p>
 				</li>
 			</ul>
 		</div>
