--- a/cosmeticsapp/src/main/resources/templates/quiz3.html
+++ b/cosmeticsapp/src/main/resources/templates/quiz3.html
@@ -28,15 +28,15 @@
 			<ul class="clearfix text-center">
 				<li>
 					<p th:text="${question1}" class="text-center"></p>
-					<p><input th:type="${radio1}" id="full" name="q3" value="full" th:value="*{value1}"></input></p>
+					<p><input type="radio" id="full" name="q3" value="full" th:value="*{value1}"></input></p>
 				</li>
 				<li>
 					<p th:text="${question2}" class="text-center"></p>
-					<p><input th:type="${radio2}" id="medium" name="q3" value="medium" th:value="*{value2}"></input></p>
+					<p><input type="radio" id="medium" name="q3" value="medium" th:value="*{value2}"></input></p>
 				</li>
 				<li>
 					<p th:text="${question3}" class="text-center"></p>
-					<p><input th:type="${radio3}" id="sheer" name="q3" value="sheer" th:value="*{value3}"></input></p>
+					<p><input type="radio" id="sheer" name="q3" value="sheer" th:value="*{value3}"></input></p>
 				</li>
 			</ul>
 		</div>
