--- a/cosmeticsapp/src/main/resources/templates/quiz4.html
+++ b/cosmeticsapp/src/main/resources/templates/quiz4.html
@@ -28,19 +28,19 @@
 			<ul class="clearfix text-center">
 				<li>
 					<p th:text="${question1}" class="text-center"></p>
-					<p><input th:type="${radio1}" id="matte" name="q4" value="matte" th:value="*{value1}"></input></p>
+					<p><input type="radio" id="matte" name="q4" value="matte" th:value="*{value1}"></input></p>
 				</li>
 				<li>
 					<p th:text="${question2}" class="text-center"></p>
-					<p><input th:type="${radio2}" id="natural" name="q4" value="natural" th:value="*{value2}"></input></p>
+					<p><input type="radio" id="natural" name="q4" value="natural" th:value="*{value2}"></input></p>
 				</li>
 				<li>
 					<p th:text="${question3}" class="text-center"></p>
-					<p><input th:type="${radio3}" id="radiant" name="q4" value="radiant" th:value="*{value3}"></input></p>
+					<p><input type="radio" id="radiant" name="q4" value="radiant" th:value="*{value3}"></input></p>
 				</li>
 				<li>
 					<p th:text="${question4}" class="text-center"></p>
-					<p><input th:type="${radio4}" id="satin" name="q4" value="satin" th:value="*{value4}"></input></p>
+					<p><input type="radio" id="satin" name="q4" value="satin" th:value="*{value4}"></input></p>
 				</li>
 			</ul>
 		</div>
