--- a/cosmeticsapp/src/main/resources/templates/quiz.html
+++ b/cosmeticsapp/src/main/resources/templates/quiz.html
@@ -29,7 +29,7 @@
 				<li>
 					<p th:id="${circle1}"></p>
 					<p th:text="${question1}" class="text-center"></p>
-					<p><input type="radio" id="fair" name="q1" value="fair" th:value="${value1}"></input></p>
+					<p><input type="radio" id="fair" name="q1" value="fair" th:value="${value1}" required="required"></input></p>
 				</li>
 				<li>
 					<p th:id="${circle2}"></p>
