--- a/cosmeticsapp/src/main/resources/templates/quiz2.html
+++ b/cosmeticsapp/src/main/resources/templates/quiz2.html
@@ -28,7 +28,7 @@
 			<ul class="clearfix text-center">
 				<li>
 					<p th:text="${question1}" class="text-center"></p>
-					<p><input type="radio" id="dry" name="q2" value="dry" th:value="*{value1}"></input></p>
+					<p><input type="radio" id="dry" name="q2" value="dry" th:value="*{value1}" required="required"></input></p>
 				</li>
 				<li>
 					<p th:text="${question2}" class="text-center"></p>
