--- a/cosmeticsapp/src/main/resources/templates/quiz4.html
+++ b/cosmeticsapp/src/main/resources/templates/quiz4.html
@@ -28,7 +28,7 @@
 			<ul class="clearfix text-center">
 				<li>
 					<p th:text="${question1}" class="text-center"></p>
-					<p><input type="radio" id="matte" name="q4" value="matte" th:value="*{value1}"></input></p>
+					<p><input type="radio" id="matte" name="q4" value="matte" th:value="*{value1}" required="required"></input></p>
 				</li>
 				<li>
 					<p th:text="${question2}" class="text-center"></p>
